# felon

./: .gitignore  BUGS.md  Design.md  FUTURE.md  Filters.md  LESS.md  Notes.txt  README.md  Todo.md
cat/src/: main.rs
document/src/: merged_logs.rs
grok/: Cargo.toml  cmd-grammar.md  unicode.py
grok/commands/: Cargo.toml
grok/commands/src/: commands.rs
grok/src/: config.rs  display.rs  document.rs  input_line.rs  keyboard.rs  lib.rs  main.rs  search_prompt.rs  status_line.rs  stylist.rs  switch_prompt.rs  viewer.rs
grok/src/styled_text/: ANSI-Notes.md  grok_iterator.rs  line_view_mode.rs  mod.rs  style.rc  styled_line.rs  stylist.rs
grok/tests/: sub_line_indexer.rs
indexed_file/: Cargo.toml
indexed_file/resources/: lnav-purity.json
indexed_file/src/: filter.rs  filtered_log.rs  index_filter.rs  iterator.rs  lib.rs  log.rs  log_filter.rs  log_stack.rs  sub_line_iterator.rs  time_stamper.rs
indexed_file/src/files/: cached_stream_reader.rs  compressed_file.rs  compressed_file_proto.rs  cursor_log_file.rs  log_file.rs  mock_log_file.rs  text_log_file.rs
indexed_file/src/files/compressed_file/: read_buffer.rs
indexed_file/src/indexer/: eventual_index.rs  index.rs  indexed_log.rs  line_indexer.rs  mod.rs  sane_index.rs  sane_indexer.rs  sane_iterator.rs  sane_lines.rs  timeout.rs  waypoint.rs
indexed_file/tests/: eventual_index.rs  filtered_log_test.rs  line_indexer.rs  sub_line_indexer.rs
play/src/: code_map.md  play.rs
tools/src/: cat.rs  config.rs
