[package]
name = "grok"
version = "0.1.0"
edition = "2021"

[lib]
name = "grok"
path = "src/lib.rs"

[[bin]]
name = "grok"
path = "src/main.rs"

[dependencies]
pico-args = "0.4.2"
crossterm = "*"
indexed_file = { path = "../indexed_file" }
lazy_static = "*"
regex = "*"
fnv = "*"
itertools = "*"
flexi_logger = "0.26"
log = "0.4"
pomprt = "*"